[package]
name = "matrix-hookshot"
version = "1.8.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="2.12.6", features=["serde-json", "napi6"]}
napi-derive = "2"
url = "2"
serde_json = "1"
serde = "1"
serde_derive = "1"
contrast = "0"
rgb = "0"
md-5 = "0.8.0"
hex = "0.4.3"
rss = "2.0.3"
atom_syndication = "0.12"
glob = "0.3.1"
uuid = {version="1.3.2", features=["v4", "fast-rng"]}
redis = "0.23.0"

[build-dependencies]
napi-build = "1"
