[package]
name = "matrix-hookshot"
version = "5.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="2", features=["serde-json", "async"]}
napi-derive = "2"
url = "2"
serde_json = "1"
serde = "1"
serde_derive = "1"
contrast = "0"
rgb = "0"
md-5 = "0.10"
hex = "0.4"
rss = "2.0"
atom_syndication = "0.12"
ruma = { version = "0.9", features = ["events", "html"] }
reqwest = "0.11"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
sha1 = "0.10.6"
[build-dependencies]
napi-build = "2"
